--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -59,7 +59,8 @@ button:hover {
 #mode,
 #idle_inhibitor,
 #scratchpad,
-#mpd {
+#mpd,
+#language {
     background-color: transparent;
     color: #ffffff;
     padding: 0 0.5rem;
@@ -118,14 +119,6 @@ button:hover {
 
 #mpd.paused {
     background-color: #51a37a;
-}
-
-#language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
 }
 
 #keyboard-state {
