--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,9 +1,39 @@
 window {
-    /*font-size: 20px;*/
-    /*font-family: "";*/
-    padding: 1rem;
+    margin: 0px;
+    border: 1px solid #928374;
+    background-color: #282828;
 }
 
-image {
-    margin: 0 1rem;
+#input {
+    margin: 5px;
+    border: none;
+    color: #ebdbb2;
+    background-color: #1d2021;
+}
+
+#inner-box {
+    margin: 5px;
+    border: none;
+    background-color: #282828;
+}
+
+#outer-box {
+    margin: 5px;
+    border: none;
+    background-color: #282828;
+}
+
+#scroll {
+    margin: 0px;
+    border: none;
+}
+
+#text {
+    margin: 5px;
+    border: none;
+    color: #ebdbb2;
+}
+
+#entry:selected {
+    background-color: #1d2021;
 }
