--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,60 +1,34 @@
 * {
-    font-family: "Inter";
-    font-size: 0.9rem;
-    border: none;
+  font-family: "Inter";
+  font-size: 0.9rem;
+  border: none;
 }
 
 window#waybar {
-    color: #ebdbb2;
-    background-color: transparent;
-}
-
-button {
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-    background: inherit;
-}
-
-#workspaces {
-    background-color: #282828;
-    border-radius: 100px;
+  color: #ebdbb2;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #workspaces button {
-    color: #ebdbb2;
-    background-color: transparent;
-    padding: 0 0.5rem;
+  color: #ebdbb2;
+  background-color: transparent;
+  padding: 0 0.25rem;
+  border-radius: 0;
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    border: none;
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
 }
 
 #workspaces button.focused {
-    color: #282828;
-    background-color: #fe8019;
-    border-radius: 100px;
-    font-weight: bold;
+  color: #282828;
+  background-color: #fe8019;
+  font-weight: bold;
 }
 
 #workspaces button.urgent {
-    background-color: #cc241d;
-}
-
-.modules-center {
-    background-color: #282828;
-    border-radius: 100px;
-}
-
-.modules-right {
-    background-color: #282828;
-    border-radius: 100px;
+  background-color: #cc241d;
 }
 
 #clock,
@@ -74,69 +48,69 @@ button:hover {
 #scratchpad,
 #mpd,
 #language {
-    padding: 0 0.8rem;
-    color: #ebdbb2;
+  padding: 0 0.5rem;
+  color: #ebdbb2;
 }
 
 #tray {
-    background-color: #458588;
+  background-color: #458588;
 }
 
 #tray>.passive {
-    -gtk-icon-effect: dim;
+  -gtk-icon-effect: dim;
 }
 
 #tray>.needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
+  -gtk-icon-effect: highlight;
+  background-color: #eb4d4b;
 }
 
 #idle_inhibitor {
-    background-color: #2d3436;
+  background-color: #2d3436;
 }
 
 #idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
+  background-color: #ecf0f1;
+  color: #2d3436;
 }
 
 #mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
+  background-color: #66cc99;
+  color: #2a5c45;
 }
 
 #mpd.disconnected {
-    background-color: #f53c3c;
+  background-color: #f53c3c;
 }
 
 #mpd.stopped {
-    background-color: #90b1b1;
+  background-color: #90b1b1;
 }
 
 #mpd.paused {
-    background-color: #51a37a;
+  background-color: #51a37a;
 }
 
 #keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
+  background: #97e1ad;
+  color: #000000;
+  padding: 0 0px;
+  margin: 0 5px;
+  min-width: 16px;
 }
 
 #keyboard-state>label {
-    padding: 0 5px;
+  padding: 0 5px;
 }
 
 #keyboard-state>label.locked {
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #scratchpad {
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #scratchpad.empty {
-    background-color: transparent;
+  background-color: transparent;
 }
